--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,4 +25,70 @@ body {
   outline-offset: 4px;
 }
 
+@font-face {
+  font-family: "Red Hat Text";
+  src: url("../fonts/RedHatText-Italic.ttf") format("ttf"), url("../fonts/RedHatText-VariableFont_wght.ttf") format("ttf");
+}
+body {
+  font-family: "Red Hat Text", sans-serif, sans-serif;
+}
+
+.page_title {
+  font-weight: 700;
+  font-size: 2.5rem;
+}
+
+@font-face {
+  font-family: "Red Hat Text";
+  src: url("../fonts/RedHatText-Italic.ttf") format("ttf"), url("../fonts/RedHatText-VariableFont_wght.ttf") format("ttf");
+}
+.addtocart_btn {
+  display: inline-flex;
+  align-items: center;
+  gap: 10px;
+  font-size: 1rem;
+  padding: 10px 20px;
+  background-color: hsl(13, 31%, 94%);
+  border-radius: 30px;
+  border: 2px solid hsl(14, 25%, 72%);
+}
+
+body {
+  background-color: hsl(20, 50%, 98%);
+}
+
+.shop .page_title {
+  color: hsl(14, 65%, 9%);
+}
+.shop .products {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  padding: 20px;
+}
+.shop .products .product {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.shop .products .product .product_image {
+  position: relative;
+}
+.shop .products .product .product_image picture {
+  width: 100%;
+  height: auto;
+}
+.shop .products .product .product_image picture img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  border-radius: 8px;
+}
+.shop .products .product .product_image .product_btn {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
 /*# sourceMappingURL=style.css.map */
