--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -2,33 +2,9 @@
 // Pre-entrega - SCSS Styles
 // ===================================================
 
+@use "reset" as *;
 @use "variables" as *;
-
-
-/* Reset global básico */
-*,
-*::before,
-*::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-html {
-    scroll-behavior: smooth;
-    font-size: calc(10 / 16 * 100);
-}
-
-body {
-    overflow-x: hidden;
-
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-}
-
-:focus {
-    outline: 2px dashed var(--color-red);
-    outline-offset: 4px;
-}
-
+@use "template-styles" as *;
+@use "components" as *;
+@use "shop" as *;
+// ===================================================
